Changelog for Poi
=================

(name of developer listed in brackets)

1.2rc1 (unreleased)
-------------------

- Only show the add response form the the user is allowed to add a
  response.  [maurits]

- Fixed the login button displayed with the login suggestion so it
  actually redirects to the login_form.  [maurits]

- Translation updates.  [maurits]


Poi 1.2 beta 1 - (12 July 2008)
-------------------------------

- Merged r68220 and r68223 from branches/1.1:
  Fixed typo that messed up a few translations.  
  And fixed untranslatable login suggestion.
  Fixes http://plone.org/products/poi/issues/191
  [maurits]

- When getting information from the parent tracker of an issue, guard
  against having a temporary folder (from the portal factory) as a
  direct parent.  Fixes errors like this:
  "Value ... is not allowed for vocabulary of element ${label}."
  Fixes http://plone.org/products/poi/issues/180
  [maurits]

- Made PoiTracker translatable with LinguaPlone.  Does not make sense
  for the other content types.  (Change merged from 1.1)
  Fixes http://plone.org/products/poi/issues/177
  [maurits]


Poi 1.2 alpha 1 - (17 June 2008)
--------------------------------

- Handle target release better -- there was some confusion between
  values and labels.  [maurits]

- Made sure that just an issue state change or an attachment upload
  is also accepted as a change.  [maurits]

- Only show the target release option when there is more than one
  option (as None is always an option).  [maurits]

- Adapted the tests to use new style responses everywhere, except in
  the tests for migrating from old to new style responses.

- Made Poi migrations available with a form at migrate-poi.html.
  [maurits]

- Removed skins/Poi/poi_response_update_issue.cpy and related code.
  [maurits]

- Add i18n to browser/response.pt  [maurits]

- Removed button for adding old style response to issue.  [maurits]

- Removed skins/Poi/determineResponseType.py  [maurits]
