@@ -6,6 +6,9 @@ Changelog for Poi
 1.2rc1 (unreleased)
 -------------------
 
+- Added migration step to migrate workflow changes (in the responses)
+  from ids to titles.  [maurits]
+
 - Only show the add response form the the user is allowed to add a
   response.  [maurits]
 
